# MLcli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: python.yml  website.yml
configs/: catboost_config.json  dbscan_config.json  hotel_dnn_config.json  hotel_logistic_config.json  hotel_rf_config.json  hotel_svm_config.json  hotel_xgb_config.json  hour_regression_config.json  isolation_forest_config.json  kmeans_config.json  lgbm_regressor_config.json  lightgbm_config.json  logistic_config.json  one_class_svm_config.json  rf_config.json  rf_regressor_config.json  svm_config.json  tf_cnn_config.json  tf_dnn_config.json  tf_rnn_config.json  tune_catboost_config.json  tune_catboost_grid_config.json  tune_dbscan_config.json  tune_isolation_forest_config.json  tune_kmeans_config.json  tune_lightgbm_config.json  tune_lightgbm_grid_config.json  tune_logistic_config.json  tune_one_class_svm_config.json  tune_rf_config.json  tune_svm_config.json  tune_svm_grid_config.json  tune_xgb_config.json  tune_xgb_grid_config.json  tune_xgb_grid_small_config.json  tune_xgb_regressor_config.json  xgb_config.json
docs/: DOCUMENTATION.md  getting-started.md  index.md  installation.md
docs/automl/: AUTOML_DESIGN.md  AUTOML_TODO.md  PROJECT_SUMMARY.md
docs/user-guide/: evaluation.md  explainability.md  index.md  preprocessing.md  training.md  tuning.md
examples/: README.md
examples/configs/: catboost.json  lightgbm.json  logistic_regression.json  random_forest.json  tensorflow_dnn.json  xgboost.json
mlcli/: __init__.py  __main__.py  cli.py
mlcli/automl/: __init__.py  automl_classifier.py  base_automl.py  data_analyzer.py  model_selector.py  preprocessing_selector.py  reporter.py  search_space.py
mlcli/config/: __init__.py  loader.py
mlcli/explainer/: __init__.py  base_explainer.py  explainer_factory.py  lime_explainer.py  shap_explainer.py
mlcli/models/: dnn_model.keras
mlcli/preprocessor/: __init__.py  base_preprocessor.py  encoders.py  feature_selectors.py  normalizers.py  pipeline.py  preprocessor_factory.py  scalers.py
mlcli/runner/: __init__.py  experiment_tracker.py
mlcli/trainers/: __init__.py  base_trainer.py  catboost_trainer.py  lightgbm_regressor_trainer.py  lightgbm_trainer.py  logistic_trainer.py  rf_regressor_trainer.py  rf_trainer.py  svm_trainer.py  tf_cnn_trainer.py  tf_dnn_trainer.py  tf_rnn_trainer.py  xgb_regressor_trainer.py  xgb_trainer.py
mlcli/tuner/: __init__.py  (+5 more)
runs/: experiments.json
scripts/: preprocess_hotel_data.py
tests/: README.md  __init__.py  conftest.py  test_automl.py  test_trainers.py  test_tuners.py
website/: .eslintrc.json  README.md  mdx-components.tsx  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
(+74 files in other folders)
