[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlcli"
version = "0.1.0"
description = "mlcli that trains, evaluates, saves, and tracks Machine Learning and Deep Learning models using a unified configuration-driven pipeline, and also provides an interactive UI layer on top of the CLI for common workflows (e.g., selecting configs, choosing model types, launching training/evaluation, and browsing experiment runs)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Devarshi Lalani", email = "devarshilalani.devflow@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",

    # OS support
    "Operating System :: OS Independent",

    # License
    "License :: OSI Approved :: MIT License",

    # Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    # Topics
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Machine Learning",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",

    # CLI
    "Environment :: Console",

    # Typing
    "Typing :: Typed",
]


dependencies = [
    "joblib>=1.1",
    "numpy>=2.0",
    "onnx>=1.14",
    "onnxruntime>=1.15",
    "pandas>=2.1",
    "plotext>=5.0",
    "pyyaml>=6.0",
    "rich-click>=1.6.0",
    "scikit-learn>=1.0",
    "skl2onnx>=1.14",
    "tensorflow>=2.10",
    "textual>=6.1",
    "typer[all]>=0.7.0",
    "xgboost>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "black>=25.0",
    "flake8>=7.0",
    "mypy>=1.0",
]

[project.scripts]
mlcli="mlcli.cli:app"

[project.urls]
Homepag="https://github.com/codeMaestro78"
Documentation="https://github.com/codeMaestro78/readme"
Repository="https://github.com/codeMaestro78/mlcli"


[tool.setuptools.packages.find]
where=["."]
include=["mlcli*", "configs*"]
exclude=["tests*"]

[tool.black]
line-length=100
target-version=['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
